# E_Business

./: .env  .env.example  .gitignore  .mcp.json  .mgrepignore  .mgreprc.yaml  CLAUDE.md  CODE_INDEX_MCP_GUIDE.md  High-Integrity Context Protocol.md  README.md  WARP.md  debug.md  docker-compose.yml  fix_docstrings.py  plan.md  rules.md
.claude/: cclsp.json  (+4 more)
backend/: CLAUDE.md  _folder.md  alembic.ini  celerybeat-schedule-shm  celerybeat-schedule-wal  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0010_add_billing.py  0011_add_superuser_system_logs.py  20251213_2024_c009d778f3bb_initial_users_workspaces.py  20251214_1309_8779b9e77ccd_add_workspace_fields_and_invite_model.py  20251214_1523_c835b2faaba2_add_audit_logs_table.py  20251215_1448_add_storage_fields.py  20251215_add_products.py  20251215_create_image_jobs.py  20251218_1630_video_audio_track.py  20251218_add_video_generation_tables.py  20260102_1820_642a94420db7_add_business_tables.py
backend/app/: _folder.md  main.py
backend/app/api/: _folder.md  deps.py  deps_auth.py
backend/app/core/: _folder.md  billing_config.py  celery_app.py  config.py  database.py  db_log_handler.py  exceptions.py  logger.py  security.py  storage.py
backend/app/db/: _folder.md  base.py  session.py
backend/app/middleware/: _folder.md  admin_error_handler.py
backend/app/models/: __init__.py  _folder.md  asset.py  audit.py  copy.py  image.py  product.py  system_log.py  user.py  video.py  workspace.py
backend/app/schemas/: __init__.py  _folder.md  admin_users.py  asset.py  audit.py  billing.py  copy.py  image.py  product.py  storage.py  user.py  video.py  workspace.py
backend/app/services/: _folder.md  audit.py  billing_service.py  copy_service.py  file_storage.py  image_service.py  rate_limiter.py  storage_service.py  task_retry_service.py  transactional_upload.py  upload_queue.py  video_service.py
backend/scripts/: check_render_status.py  check_task_celery.py  get_video_project.py  setup_api_test.py  setup_user2_test.py  start_celery.sh  test_video_workflow.py
(+475 files in other folders)
