[tool.poetry]
name = "ebusiness-backend"
version = "0.1.0"
description = "E_Business FastAPI Backend"
authors = ["ZenoWang"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
celery = {extras = ["redis"], version = "^5.3.6"}
redis = "^5.0.1"
boto3 = "^1.34.0"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
openai = "^1.3.0"
tenacity = "^8.2.0"
tiktoken = "^0.5.0"
httpx = "^0.26.0"
ffmpeg-python = "^0.2.0"
edge-tts = "^6.1.0"
pydub = "^0.25.15"
numpy = "^1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
factory-boy = "^3.3.0"
faker = "^20.1.0"
httpx = "^0.26.0"
psycopg2-binary = "^2.9.9"
structlog = "^24.1.0"
python-json-logger = "^2.0.7"
psutil = "^5.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
